# tribes-py

./: .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  eval_rl.py  main.py  pyproject.toml  sample-config.json  train.py
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  ci.yml
img/: images-attribution.txt
levels/: balanced_level_4p.csv  minimal_level.csv  minimal_level_2.csv  minimal_level_water.csv  movement_playground.csv  sample_2p.json  sample_2p_villages.json  sample_4p.json  sample_4p_generated.json  sample_4p_villages.json  sample_8p.json  sample_level.csv  sample_level_2p.csv  sample_level_4p_2.csv  sample_level_8p_40x40.csv  test.csv  test_2.csv  test_edit.csv
tests/: __init__.py
tests/e2e/: __init__.py  test_cli.py  test_full_game.py  test_train.py
tests/unit/: __init__.py  test_agents.py  test_empty_city_generation.py  test_game_state.py  test_tribe_result.py  test_types.py  test_vector2d.py  test_village_capture.py
tribes/: __init__.py  config.py  constants.py  curriculum.py  diplomacy.py  gym_env.py  model.py  tech_tree.py  tournament.py  types.py
tribes/actions/: __init__.py  action.py  action_command.py
tribes/actions/city_actions/: __init__.py  build.py  burn_forest.py  city_action.py  clear_forest.py  destroy.py  grow_forest.py  level_up.py  resource_gathering.py  spawn.py
tribes/actors/: __init__.py  actor.py  building.py  city.py  tribe.py
tribes/actors/units/: __init__.py  (+13 more)
tribes/game/: __init__.py  board.py  game.py  game_spec.py  game_state.py  level_loader.py  trade_network.py  tribe_result.py
tribes/gui/: __init__.py  gui.py
tribes/players/: __init__.py  agent.py  do_nothing_agent.py  random_agent.py  simple_agent.py
tribes/utils/: __init__.py  path_node.py  pathfinder.py  vector2d.py
(+48 files in other folders)
