[project]
name = "tribes-py"
version = "0.1.0"
description = "Python port of Tribes strategy game"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pygame>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
dev = [
    "bump-my-version>=0.28",
    "pre-commit>=3.0",
    "flake8>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tribes"]
