[project]
name = "tribes-py"
version = "1.6.0"
description = "Python port of Tribes strategy game"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.0",
    "gymnasium>=1.3.0",
    "pygame>=2.6.0",
    "sb3-contrib>=2.9.0a2",
    "stable-baselines3>=2.9.0a2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]
dev = [
    "black==25.1.0",
    "bump-my-version>=0.28",
    "pre-commit>=3.0",
    "flake8>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tribes"]
